--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
         // Supported widget types for emoji tagging
         const SUPPORTED_TYPES = ['shape', 'sticky_note', 'text'];
 
+        // Stripe width in pixels (global config - adjust to taste)
+        const STRIPE_WIDTH = 50;
+
         // Background colors (configurable) - order matters for stripes
         const BG_COLORS = [
             '#8FD14F', // Light green (0.561, 0.820, 0.310)
@@ -153,6 +156,46 @@
                         height: 580 // Extended height for color section
                     });
                 });
+
+                // Listen for item updates to sync stripe background size with shape
+                // Note: experimental event - fires for moves, resizing, rotation, scale
+                miro.board.ui.on('experimental:items:update', handleItemsUpdate);
+            }
+        }
+
+        // Handle item updates - sync stripe background size when shape is resized
+        async function handleItemsUpdate(event) {
+            for (const item of event.items) {
+                // Only care about shapes
+                if (item.type !== 'shape') continue;
+
+                // Check if this shape is in one of our stripe groups
+                if (!item.parentId) continue;
+
+                try {
+                    const parent = await miro.board.getById(item.parentId);
+                    if (!parent || parent.type !== 'group') continue;
+
+                    const isOurs = await isStripeGroup(parent);
+                    if (!isOurs) continue;
+
+                    // Find the stripe image in the group and resize it to match the shape
+                    const groupItems = await parent.getItems();
+                    for (const groupItem of groupItems) {
+                        if (groupItem.type === 'image' && groupItem.url && groupItem.url.startsWith('data:image/svg+xml;base64,')) {
+                            // Update image dimensions to match shape (stretching is fine)
+                            groupItem.width = item.width;
+                            groupItem.height = item.height;
+                            groupItem.x = item.x;
+                            groupItem.y = item.y;
+                            groupItem.rotation = item.rotation || 0;
+                            await groupItem.sync();
+                            break;
+                        }
+                    }
+                } catch (err) {
+                    // Silently ignore errors - shape might have been deleted or ungrouped
+                }
             }
         }
 
@@ -360,9 +403,12 @@
                 const items = await group.getItems();
                 if (items.length !== 2) return false;
 
-                const hasImage = items.some(i => i.type === 'image' && i.title === STRIPE_BG_TITLE);
+                // Identify our stripe images by their data URL pattern (more reliable than title)
+                const hasStripeImage = items.some(i =>
+                    i.type === 'image' && i.url && i.url.startsWith('data:image/svg+xml;base64,')
+                );
                 const hasShape = items.some(i => i.type === 'shape');
-                return hasImage && hasShape;
+                return hasStripeImage && hasShape;
             } catch (err) {
                 return false;
             }
@@ -373,9 +419,9 @@
                 const items = await group.getItems();
                 await group.ungroup();
 
-                // Delete the stripe background image
+                // Delete the stripe background image (identified by data URL pattern)
                 for (const item of items) {
-                    if (item.type === 'image' && item.title === STRIPE_BG_TITLE) {
+                    if (item.type === 'image' && item.url && item.url.startsWith('data:image/svg+xml;base64,')) {
                         await miro.board.remove(item);
                     }
                 }
@@ -389,8 +435,8 @@
             const visibleColors = colors.filter(c => c !== 'transparent');
             if (visibleColors.length === 0) return null;
 
-            // Stripe width scales with box size
-            const stripeWidth = Math.max(10, Math.min(width, height) / 10);
+            // Use global stripe width config
+            const stripeWidth = STRIPE_WIDTH;
             // Need enough stripes to cover from -height to width (diagonal coverage)
             const totalLen = width + height;
             const numStripes = Math.ceil(totalLen / stripeWidth) + visibleColors.length;
